Fix icon drawing height jump issue

--- a/src/stylesheets/partials/_threecolsection.scss
+++ b/src/stylesheets/partials/_threecolsection.scss
@@ -15,6 +15,11 @@
         list-style: none;
         overflow: hidden;
     }
+    .animicon {
+        height: 120px;
+        @include fluid(margin-top, 320px, 1366px, 20px, 50px);
+        @include fluid(margin-bottom, 320px, 1366px, 10px, 40px);
+    }
     .col {
         width: 33%;
         float: left;
@@ -25,8 +30,6 @@
             display: block;
             margin-right: auto;
             margin-left: auto;
-            @include fluid(margin-top, 320px, 1366px, 20px, 50px);
-            @include fluid(margin-bottom, 320px, 1366px, 10px, 40px);
         }
     }
     h4 {
